[package]
name = "orange"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"
description = "Game description"
build = "build.rs"

[package.metadata.bundle]
name = "MyGame"
identifier = "xogames.game"
icon = ["icons/icon*.png"]
category = "Utility"
resources = ["resources"]
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.23"
thiserror = "1.0.11"
flexi_logger = { version = "0.15", features = ["specfile"] }
log = "0.4"

[build-dependencies]
fs_extra = "1.1.0"

[dependencies.render]
path = 'lib/render/'

[dependencies.gl]
path = 'lib/gl/'

[dependencies.assets]
path = 'lib/assets/'

[dependencies.editor]
path = 'lib/editor/'

[dependencies.ecs]
path = 'lib/ecs/'

[dependencies.game]
path = 'lib/game/'
