[package]
name = "orange"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"
description = "Game description"
build = "build.rs"

[package.metadata.bundle]
name = "MyGame"
identifier = "xogames.game"
icon = ["icons/icon*.png"]
category = "Utility"
resources = ["resources"]
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
glutin = "0.24.1"
thiserror = "1.0.19"
flexi_logger = { version = "0.15", features = ["specfile"] }
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.18.1", features = [ "serialize" ] }
base64 = "0.12.1"

[build-dependencies]
fs_extra = "1.1.0"

[dependencies.render]
path = 'lib/render/'

[dependencies.gl]
path = 'lib/gl/'

[dependencies.editor]
path = 'lib/editor/'

[dependencies.ecs]
path = 'lib/ecs/'
