[package]
name = "orange"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"
description = "Game description"
build = "build.rs"

[package.metadata.bundle]
name = "MyGame"
identifier = "xogames.game"
icon = ["icons/icon*.png"]
category = "Games"
resources = ["resources"]
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]

[dependencies]
# Core components
common = { path = 'lib/common' }

# Game editor UI
editor = { path = 'lib/editor/' }

# Window plugin
window = { path = 'lib/window/' }

[build-dependencies]
fs_extra = "1.1.0"