[package]
name = "render"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = '../game' }
opengl_api = { path = './api/opengl' }
render_components = { path = './components' }