[package]
name = "common"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = { version = "0.5.0", features = ["thread_local"] }
flexi_logger = { version = "0.17.1", features = ["specfile", "colors"] }
log = "0.4"