[package]
name = "ecs"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = "0.3.2"
nalgebra-glm = "0.7.0"
winit = "0.22.1"
log = "0.4"
stb_image = "0.2.2"