[package]
name = "editor"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.7.0"
winit = "0.22.2"
imgui = "0.3.0"

[dependencies.imgui-winit-support]
features = ["winit-20"]
path = './imgui-winit-support/'

[dependencies.imgui-opengl-renderer]
path = './imgui-opengl-renderer/'

[dependencies.ecs]
path = '../ecs/'

[dependencies.gl]
path = '../gl/'
