[package]
name = "editor"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.7.0"
winit = "0.22.2"
imgui = "0.4.0"

# Internal
imgui-winit-support = { path = './imgui-winit-support/' }
imgui-opengl-renderer = { path = './imgui-opengl-renderer/' }

# Game modules
game = { path = '../game' }
gl = { patch = '../render/lib/gl/' }
