[package]
name = "editor"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"

# Core module
common = { path = '../common/' }

# Render module dependency
opengl = { path = '../opengl/' }

# Math module dependency
math = { path = '../math/' }

# Window module dependency
window = { path = '../window/' }

# Input module dependency
input = { path = '../input/' }