[package]
name = "game"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = { git = "https://github.com/leudz/shipyard", features = ["non_send", "non_sync"] }
nalgebra-glm = "0.7.0"
winit = "0.22.2"
log = "0.4"
stb_image = "0.2.2"