[package]
name = "gl"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.17"
nalgebra-glm = "0.7.0"

[build-dependencies]
gl_generator = "0.14.0"
