[package]
name = "input"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core module
common = { path = '../common/' }

# Window
window = { path = '../window/' }

# Math
math = { path = '../math/' }