[package]
name = "opengl"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.19"
nalgebra-glm = "0.11.0"

# Core
common = { path = '../common/'  }

# Window api
window = { path = '../window/' }

[build-dependencies]
gl_generator = "0.14.0"
