[package]
name = "render"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.23"
thiserror = "1.0.11"

[dependencies.state]
path = '../state/'

[dependencies.gl]
path = '../gl/'