[package]
name = "render"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.19"
nalgebra-glm = "0.7.0"
winit = "0.22.2"

ecs = { path = '../ecs/' }
gl = { path = './lib/gl/' }