[package]
name = "webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rust webgpu API
wgpu = "0.15.1"

# Core module
common = { path = '../common/' }

# Window module
window = { path = '../window/' }