[package]
name = "window"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
glutin = "0.30.0"

# Core module
common = { path = '../common/' }

# Math module
math = { path = '../math/' }