[package]
name = "imgui-opengl-renderer"
description = "An OpenGL renderer for imgui-rs"
version = "0.7.0"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
homepage = "https://github.com/michaelfairley/rust-imgui-opengl-renderer"
repository = "https://github.com/michaelfairley/rust-imgui-opengl-renderer"
categories = ["gui", "rendering::graphics-api"]
license = "MIT/Apache-2.0"

[dependencies]
imgui = "0.4.0"

[dependencies.gl]
path = '../../gl/'