[package]
name = "opengl_api"
version = "0.1.0"
authors = ["Alex Kucherenko <kucherenko.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = '../../../game' }
window = { path = '../../../window' }
gl = { path = '../../lib/gl' }
render_components = { path = '../../../render/components' }